welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:17: error: expected class or object definition
def direm(a:Int, b:Int): Boolean = {
^maxMod5:28: error: expected class or object definition
def irem(a:Int):Int = {
^maxMod5:33: error: expected class or object definition
def min (a:Int , b:Int): Int = {
^maxMod5:38: error: expected class or object definition
def max (a:Int , b:Int): Int = {
^maxMod5:51: error: Unmatched closing brace '}' ignored here
 }
 ^